--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <form class="todo-form">
         <div class="header">
           <h1 class="title">TODO</h1>
-          <input type="checkbox" class="theme-switch">
+          <input type="checkbox" class="theme-switch" aria-hidden="true">
         </div>
         <div class="input-holder">
-          <button type="submit" class="apply"></button>
-          <input type="text" class="todo-input" placeholder="Create a new todo...">
+          <button type="submit" class="apply" title="submit input"></button>
+          <input type="text" class="todo-input" placeholder="Create a new todo..." aria-label="create todo">
         </div>
       </form>
 
