--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <form class="todo-form">
         <div class="header">
           <h1 class="title">TODO</h1>
-          <input aria-label="switch theme" type="checkbox" class="theme-switch">
+          <input type="checkbox" class="theme-switch" aria-label="switch theme">
         </div>
         <div class="input-holder">
           <button type="submit" class="apply" title="submit input"></button>
